blueprints/clickhouse/plausible/service.yml
---
apiVersion: v1
kind: Service
metadata:
  name: clickhouse
spec:
  ports:
    - name: http
      port: 8123
      protocol: TCP
      targetPort: http
    - name: tcp
      port: 9000
      protocol: TCP
      targetPort: tcp
    - name: metrics
      port: 8001
      protocol: TCP
      targetPort: metrics
  type: ClusterIP
